@@ -1,0 +1,145 @@
+'''
+    Cumination
+    Copyright (C) 2025 Cumination
+
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+'''
+
+import re
+import time
+from resources.lib import utils
+from resources.lib.adultsite import AdultSite
+from six.moves import urllib_parse
+import xbmc
+import xbmcgui
+from resources.lib.decrypters.kvsplayer import kvs_decode
+
+
+site = AdultSite('85po', '[COLOR hotpink]85po[/COLOR]', 'https://85po.com/', '85po.png', '85po')
+
+
+@site.register(default_mode=True)
+def Main():
+    site.add_dir('[COLOR hotpink]4K[/COLOR]', site.url + '4k/', 'List', site.img_cat)
+    site.add_dir('[COLOR hotpink]Search[/COLOR]', site.url + 'en/search/{}/', 'Search', site.img_search)
+    List(site.url + 'en/latest-updates/')
+    utils.eod()
+
+
+@site.register()
+def List(url):
+    listhtml = utils.getHtml(url)
+    if 'There is no data in this list.' in listhtml:
+        utils.notify(msg='No videos found!')
+        return
+    listhtml = listhtml.replace('<div class="k4">', '<div class="FHD">')
+    listhtml = listhtml.replace('>1K<', '>720p<').replace('>2K<', '>1080p<').replace('>4K<', '>2060p<')
+
+    delimiter = 'class="thumb thumb_rel item'
+    re_videopage = '<a href="([^"]+)"'
+    re_name = 'title="([^"]+)"'
+    re_img = 'data-original="([^"]+)"'
+    re_duration = r'fa-clock"></span>\s*([^<]+)<'
+    re_quality = r'class="qualtiy \d+k">([^<]+)<'
+
+    cm = []
+    cm_lookupinfo = (utils.addon_sys + "?mode=" + str('85po.Lookupinfo') + "&url=")
+    cm.append(('[COLOR deeppink]Lookup info[/COLOR]', 'RunPlugin(' + cm_lookupinfo + ')'))
+    cm_related = (utils.addon_sys + "?mode=" + str('85po.Related') + "&url=")
+    cm.append(('[COLOR deeppink]Related videos[/COLOR]', 'RunPlugin(' + cm_related + ')'))
+
+    utils.videos_list(site, '85po.Playvid', listhtml, delimiter, re_videopage, re_name, re_img, re_duration=re_duration, re_quality=re_quality, contextm=cm)
+
+    match = re.search(r'''<a class="active[^"]+">(\d+)<.+?class='next'.+?data-block-id="([^"]+)"\s+data-parameters="([^"]+)">''', listhtml, re.DOTALL | re.IGNORECASE)
+    if match:
+        npage = int(match.group(1)) + 1
+        block_id = match.group(2)
+        params = match.group(3).replace(';', '&').replace(':', '=')
+        ts = int(time.time() * 1000)
+        nurl = url.split('?')[0] + '?mode=async&function=get_block&block_id={0}&{1}&_={2}'.format(block_id, params, ts)
+        lpnr, lastp = 0, ''
+        match = re.search(r">(\d+)</a>\s*<a\s+class='next'", listhtml, re.DOTALL | re.IGNORECASE)
+        if match:
+            lpnr = match.group(1)
+            lastp = '/{}'.format(lpnr)
+        nurl = nurl.replace('+from_albums', '')
+        nurl = re.sub(r'&from([^=]*)=\d+', r'&from\1={}'.format(npage), nurl)
+
+        cm_page = (utils.addon_sys + "?mode=85po.GotoPage" + "&url=" + urllib_parse.quote_plus(nurl) + "&np=" + str(npage) + "&lp=" + str(lpnr))
+        cm = [('[COLOR violet]Goto Page #[/COLOR]', 'RunPlugin(' + cm_page + ')')]
+
+        site.add_dir('[COLOR hotpink]Next Page...[/COLOR] (' + str(npage) + lastp + ')', nurl, 'List', site.img_next, contextm=cm)
+    utils.eod()
+
+
+@site.register()
+def GotoPage(url, np, lp=0):
+    dialog = xbmcgui.Dialog()
+    pg = dialog.numeric(0, 'Enter Page number')
+    if pg:
+        if int(lp) > 0 and int(pg) > int(lp):
+            utils.notify(msg='Out of range!')
+            return
+        url = re.sub(r'&from([^=]*)=\d+', r'&from\1={}'.format(pg), url, re.IGNORECASE)
+        contexturl = (utils.addon_sys + "?mode=" + "85po.List&url=" + urllib_parse.quote_plus(url))
+        xbmc.executebuiltin('Container.Update(' + contexturl + ')')
+
+
+@site.register()
+def Search(url, keyword=None):
+    if not keyword:
+        site.search_dir(url, 'Search')
+    else:
+        List(url.format(keyword.replace(' ', '-')))
+
+
+@site.register()
+def Playvid(url, name, download=None):
+    vp = utils.VideoPlayer(name, download)
+    vp.progress.update(25, "[CR]Loading video page[CR]")
+    videopage = utils.getHtml(url, site.url)
+    sources = {}
+    license = re.compile(r"license_code:\s*'([^']+)", re.DOTALL | re.IGNORECASE).findall(videopage)[0]
+    patterns = [r"video_url:\s*'([^']+)[^;]+?video_url_text:\s*'([^']+)",
+                r"video_alt_url:\s*'([^']+)[^;]+?video_alt_url_text:\s*'([^']+)",
+                r"video_alt_url2:\s*'([^']+)[^;]+?video_alt_url2_text:\s*'([^']+)",
+                r"video_alt_url3:\s*'([^']+)[^;]+?video_alt_url3_text:\s*'([^']+)",
+                r"video_url:\s*'([^']+)',\s*(postfix):\s*'\.mp4'"]
+    for pattern in patterns:
+        items = re.compile(pattern, re.DOTALL | re.IGNORECASE).findall(videopage)
+        for surl, qual in items:
+            qual = '480p' if qual == 'postfix' else qual
+            qual = '2160p' if qual == '4K' else qual
+            surl = kvs_decode(surl, license)
+            sources.update({qual: surl})
+    vp.progress.update(50, "[CR]Loading video[CR]")
+    videourl = utils.selector('Select quality', sources, setting_valid='qualityask', sort_by=lambda x: 1081 if x == '4k' else int(x[:-1]), reverse=True)
+    if videourl:
+        vp.progress.update(75, "[CR]Video found[CR]")
+        vp.play_from_direct_link(videourl)
+
+
+@site.register()
+def Lookupinfo(url):
+    lookup_list = [
+        ("Tags", r'href="https://www.85po.com/(en/tags/[^"]+)">([^<]+)<', '')
+    ]
+    lookupinfo = utils.LookupInfo(site.url, url, '85po.List', lookup_list)
+    lookupinfo.getinfo()
+
+
+@site.register()
+def Related(url):
+    contexturl = (utils.addon_sys + "?mode=" + str('85po.List') + "&url=" + urllib_parse.quote_plus(url))
+    xbmc.executebuiltin('Container.Update(' + contexturl + ')')
