@@ -1,4 +1,5 @@
 [B]Version 1.1.149[/B]
 - foxnxx - fix playback
 - spankbang - fix listing
-
+- 85po - new site
+- hdporn92 - fix playback
